- Added Entities - Added Entities to DbContext file - Added the migrations

--- a/LibrarySystem.Entities/LibrarySystem.Entities.csproj
+++ b/LibrarySystem.Entities/LibrarySystem.Entities.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Authors\" />
-    <Folder Include="Members\" />
-    <Folder Include="Borrowings\" />
+    <ProjectReference Include="..\LibrarySystem.Utils\LibrarySystem.Utils.csproj" />
   </ItemGroup>
 
 </Project>
