--- a/LibrarySystem.Mvc/LibrarySystem.Mvc.csproj
+++ b/LibrarySystem.Mvc/LibrarySystem.Mvc.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibrarySystem.Entities\LibrarySystem.Entities.csproj" />
+    <ProjectReference Include="..\LibrarySystem.Utils\LibrarySystem.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
